feat: TrunkによるCSSとデータディレクトリのリンクを追加

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
     <!-- Custom Style -->
-    <link rel="stylesheet" href="assets/style.css">
+    <link data-trunk rel="css" href="assets/style.css">
+    <link data-trunk rel="copy-dir" href="images">
+    <link data-trunk rel="copy-dir" href="datasets">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-cloud/1.2.5/d3.layout.cloud.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
