--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             return JSON.stringify(segments);
         };
     </script>
+    <link data-trunk rel="rust" data-target-name="easy_stat_r" />
 </head>
 
 <body>
